<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.PermissionActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dashboardImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_splash" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_100dp"
        android:background="@drawable/ic_app_logo"
        android:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/queText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/queText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_40dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/S_QUE"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimen_30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/requestQue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/requestQue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/montserratregular"
        android:gravity="center"
        android:text="@string/S_REQ_GPS"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintBottom_toTopOf="@+id/ivGPSOn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ivGPSOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_22sdp"
        android:background="@drawable/bg_btn"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/S_TURN_ON_GPS"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>