<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.login.view.LoginActivity">


    <ScrollView
        android:id="@+id/parentScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_subhuge"
                android:background="@drawable/ic_app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratsemibold"
                    android:gravity="start"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@id/etPassword"
                    android:textColor="@color/colorGrayText"
                    android:textSize="@dimen/_14ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmailField">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:fontFamily="@font/montserratsemibold"
                    android:gravity="start"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorGrayText"
                    android:textSize="@dimen/_14ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivShowPass"
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:contentDescription="Hide"
                android:padding="@dimen/margin_tiny"
                android:src="@drawable/ic_eye_hide"
                app:layout_constraintBottom_toBottomOf="@+id/etPasswordField"
                app:layout_constraintEnd_toEndOf="@+id/etPasswordField"
                app:layout_constraintTop_toTopOf="@+id/etPasswordField" />

            <CheckBox
                android:id="@+id/rememberCheck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tiny"
                android:button="@drawable/check_cart"
                android:padding="@dimen/_5sdp"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/remember_me"
                android:textColor="@color/colorGray100"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toStartOf="@+id/tvForgotPass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordField" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/forgot_password"
                android:textColor="@color/colorGray100"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/rememberCheck"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rememberCheck" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/QueDrop.Button.DarkBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/rememberCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/or"
                android:textAllCaps="true"
                android:textColor="@color/colorBorderGray"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <View
                android:layout_width="@dimen/_76sdp"
                android:layout_height="@dimen/border_1dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@color/colorBorderGray"
                app:layout_constraintBottom_toBottomOf="@+id/tvOr"
                app:layout_constraintEnd_toStartOf="@+id/tvOr"
                app:layout_constraintTop_toTopOf="@+id/tvOr" />

            <View
                android:layout_width="@dimen/margin_xhuge"
                android:layout_height="@dimen/border_1dp"
                android:layout_marginStart="@dimen/_16sdp"
                android:background="@color/colorBorderGray"
                app:layout_constraintBottom_toBottomOf="@+id/tvOr"
                app:layout_constraintStart_toEndOf="@+id/tvOr"
                app:layout_constraintTop_toTopOf="@+id/tvOr" />


            <TextView
                android:id="@+id/tvFbLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:background="@drawable/bg_google_login"
                android:drawableStart="@drawable/ic_icon_fb"
                android:drawablePadding="@dimen/margin_submedium"
                android:fontFamily="@font/montserratsemibold"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingTop="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_15dp"
                android:text="@string/facebook"
                android:textColor="@color/colorGray100"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toStartOf="@+id/tvOr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOr" />


            <TextView
                android:id="@+id/tvGoogleLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:background="@drawable/bg_google_login"
                android:drawableStart="@drawable/ic_icon_google"
                android:drawablePadding="@dimen/margin_submedium"
                android:fontFamily="@font/montserratsemibold"
                android:paddingStart="@dimen/margin_large"
                android:paddingTop="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_15dp"
                android:text="@string/google"
                android:textColor="@color/colorGray100"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvOr"
                app:layout_constraintTop_toBottomOf="@+id/tvOr" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/account_register"
                android:textColor="@color/colorBlueText"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFbLogin" />

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:gravity="center"
                android:textColor="@color/colorLightGray"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>