<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:focusable="true">

    <include
        android:id="@+id/toolbarSetting"
        layout="@layout/toolbar_normal" />

    <ScrollView
        android:id="@+id/parentScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSetting">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_15dp"
            tools:ignore="RtlSymmetry">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvChangePasswordSettings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="center_vertical"
                android:text="@string/change_password"
                android:textColor="@color/colorGray100"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/horizontalLineSetting1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@color/colorBorderGray"
                app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordSettings" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMyReferralCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:drawableStart="@drawable/ic_wallet"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="center_vertical"
                android:text="@string/my_referral_code"
                android:textColor="@color/colorGray100"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalLineSetting1" />

            <View
                android:id="@+id/horizontalLineSetting3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@color/colorBorderGray"
                app:layout_constraintTop_toBottomOf="@+id/tvMyReferralCode" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvManagePaymentMethod"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:drawableStart="@drawable/ic_copy_referral"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="@dimen/dimen_10dp"
                android:drawableTint="@color/colorBorderGray"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="center_vertical"
                android:text="@string/manage_payment_method"
                android:textColor="@color/colorGray100"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalLineSetting3" />

            <View
                android:id="@+id/horizontalLineSetting4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@color/colorBorderGray"
                app:layout_constraintTop_toBottomOf="@+id/tvManagePaymentMethod" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvReviewsRatings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:drawableStart="@drawable/ic_ratting_thumb"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="center_vertical"
                android:text="@string/rating_reviews"
                android:textColor="@color/colorGray100"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalLineSetting4" />

            <View
                android:id="@+id/horizontalLineSetting5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@color/colorBorderGray"
                app:layout_constraintTop_toBottomOf="@+id/tvReviewsRatings" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIdentityDetails"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:drawableStart="@drawable/ic_sport_car"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="center_vertical"
                android:text="@string/identity_details"
                android:textColor="@color/colorGray100"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalLineSetting5" />

            <View
                android:id="@+id/horizontalLineSetting6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@color/colorBorderGray"
                app:layout_constraintTop_toBottomOf="@+id/tvIdentityDetails" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <TextView
        android:id="@+id/btnLogOutSettings"
        style="@style/QueDrop.Button.DarkBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:drawablePadding="@dimen/dimen_10dp"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_15dp"
        android:paddingBottom="@dimen/dimen_15dp"
        android:text="@string/logout"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_l"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
